// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`acceptTeamInvite adds an invitee who was not previously in the org 1`] = `
Object {
  "invitation": Array [],
  "notification": Array [],
  "teamMember": Object {
    "checkInOrder": 4,
    "email": "invitee@mockTeam+acceptTeamInvite1.co",
    "id": 3,
    "isCheckedIn": null,
    "isFacilitator": true,
    "isLead": false,
    "isNotRemoved": true,
    "picture": "https://placeimg.com/100/100/animals",
    "preferredName": "inviteeGuy",
    "teamId": 1,
    "userId": 0,
  },
  "user": Object {
    "cachedAt": 2017-01-01T07:00:00.000Z,
    "createdAt": 2017-01-01T07:00:00.000Z,
    "email": "invitee@mockTeam+acceptTeamInvite1.co",
    "emailVerified": false,
    "id": 0,
    "identities": Array [],
    "inactive": false,
    "lastLogin": 2017-01-01T07:00:00.000Z,
    "lastSeenAt": 2017-01-01T07:00:00.000Z,
    "name": "inviteeGuy",
    "picture": "https://placeimg.com/100/100/animals",
    "preferredName": "inviteeGuy",
    "tms": Array [
      1,
    ],
    "updatedAt": 2017-01-01T08:00:00.000Z,
    "userOrgs": Array [
      Object {
        "id": 2,
        "role": null,
      },
    ],
    "welcomeSentAt": 2017-01-01T07:00:00.000Z,
  },
}
`;

exports[`acceptTeamInvite adds an invitee who was not previously in the org 2`] = `
Object {
  "newAuthToken": Array [
    Object {
      "channelId": 0,
      "message": Object {
        "newAuthToken": 5,
      },
    },
  ],
  "notificationsAdded": Array [
    Object {
      "channelId": 0,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "authToken": "FAKEENCODEDJWT",
              "orgId": 2,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 1,
              "teamName": "Team America",
              "type": "ADD_TO_TEAM",
            },
          ],
        },
      },
    },
    Object {
      "channelId": 1,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "preferredName": "inviteeGuy",
              "teamId": 1,
              "teamName": "Team America",
              "type": "JOIN_TEAM",
            },
          ],
        },
      },
    },
  ],
  "notificationsCleared": Array [
    Object {
      "channelId": 0,
      "message": Object {
        "notificationsCleared": Object {
          "deletedIds": Array [
            6,
          ],
        },
      },
    },
  ],
  "teamMemberAdded": Array [
    Object {
      "channelId": 1,
      "message": Object {
        "teamMemberAdded": Object {
          "teamMember": Object {
            "checkInOrder": 9,
            "email": "invitee@mockTeam+acceptTeamInvite1.co",
            "id": 3,
            "isCheckedIn": null,
            "isFacilitator": true,
            "isLead": false,
            "isNotRemoved": true,
            "picture": "https://placeimg.com/100/100/animals",
            "preferredName": "inviteeGuy",
            "teamId": 1,
            "userId": 0,
          },
        },
      },
    },
  ],
}
`;

exports[`acceptTeamInvite adds an invitee who was previously in the org 1`] = `
Object {
  "invitation": Array [],
  "notification": Array [],
  "teamMember": Object {
    "checkInOrder": 6,
    "email": "vision@avengers.org",
    "id": 5,
    "isCheckedIn": null,
    "isFacilitator": true,
    "isLead": false,
    "isNotRemoved": true,
    "picture": "https://placeimg.com/100/100/animals",
    "preferredName": "Vision",
    "teamId": 2,
    "userId": 0,
  },
  "user": Object {
    "cachedAt": 2017-01-01T07:00:00.000Z,
    "createdAt": 2017-01-01T07:00:00.000Z,
    "email": "vision@avengers.org",
    "emailVerified": false,
    "id": 0,
    "identities": Array [],
    "inactive": false,
    "lastLogin": 2017-01-01T07:00:00.000Z,
    "lastSeenAt": 2017-01-01T07:00:00.000Z,
    "name": "Jonas",
    "picture": "https://placeimg.com/100/100/animals",
    "preferredName": "Vision",
    "tms": Array [
      1,
      2,
    ],
    "updatedAt": 2017-01-01T08:00:00.000Z,
    "userOrgs": Array [
      Object {
        "id": 3,
        "role": null,
      },
      Object {
        "id": 4,
        "role": null,
      },
    ],
    "welcomeSentAt": 2017-01-01T07:00:00.000Z,
  },
}
`;

exports[`acceptTeamInvite adds an invitee who was previously in the org 2`] = `
Object {
  "newAuthToken": Array [
    Object {
      "channelId": 0,
      "message": Object {
        "newAuthToken": 7,
      },
    },
  ],
  "notificationsAdded": Array [
    Object {
      "channelId": 0,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "authToken": "FAKEENCODEDJWT",
              "orgId": 3,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 2,
              "teamName": "Team America",
              "type": "ADD_TO_TEAM",
            },
          ],
        },
      },
    },
    Object {
      "channelId": 2,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "preferredName": "Vision",
              "teamId": 2,
              "teamName": "Team America",
              "type": "JOIN_TEAM",
            },
          ],
        },
      },
    },
  ],
  "notificationsCleared": Array [
    Object {
      "channelId": 0,
      "message": Object {
        "notificationsCleared": Object {
          "deletedIds": Array [
            8,
          ],
        },
      },
    },
  ],
  "teamMemberAdded": Array [
    Object {
      "channelId": 2,
      "message": Object {
        "teamMemberAdded": Object {
          "teamMember": Object {
            "checkInOrder": 1,
            "email": "vision@avengers.org",
            "id": 5,
            "isCheckedIn": null,
            "isFacilitator": true,
            "isLead": false,
            "isNotRemoved": true,
            "picture": "https://placeimg.com/100/100/animals",
            "preferredName": "Vision",
            "teamId": 2,
            "userId": 0,
          },
        },
      },
    },
  ],
}
`;
